--- a/pandas/Series.ipynb
+++ b/pandas/Series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5539,7 +5539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5549,8 +5549,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5564,7 +5566,7 @@
        "Name: Stock Price, dtype: float64"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5576,7 +5578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5591,7 +5593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -5607,7 +5609,7 @@
        "Name: Stock Price, dtype: object"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5618,7 +5620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -5633,7 +5635,7 @@
        "Name: Stock Price, dtype: float64"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5644,7 +5646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -5658,7 +5660,7 @@
        "Name: Stock Price, dtype: float64"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
