--- a/pandas/DataFrames_two.ipynb
+++ b/pandas/DataFrames_two.ipynb
@@ -12,42 +12,141 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Memory Optimization"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>First Name</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Start Date</th>\n",
+       "      <th>Last Login Time</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Bonus %</th>\n",
+       "      <th>Senior Management</th>\n",
+       "      <th>Team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Douglas</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1993-08-06</td>\n",
+       "      <td>2019-04-28 12:42:00</td>\n",
+       "      <td>97308</td>\n",
+       "      <td>6.945</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Marketing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1996-03-31</td>\n",
+       "      <td>2019-04-28 06:53:00</td>\n",
+       "      <td>61933</td>\n",
+       "      <td>4.170</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maria</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1993-04-23</td>\n",
+       "      <td>2019-04-28 11:17:00</td>\n",
+       "      <td>130590</td>\n",
+       "      <td>11.858</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Finance</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  First Name  Gender Start Date     Last Login Time  Salary  Bonus %  \\\n",
+       "0    Douglas    Male 1993-08-06 2019-04-28 12:42:00   97308    6.945   \n",
+       "1     Thomas    Male 1996-03-31 2019-04-28 06:53:00   61933    4.170   \n",
+       "2      Maria  Female 1993-04-23 2019-04-28 11:17:00  130590   11.858   \n",
+       "\n",
+       "   Senior Management       Team  \n",
+       "0               True  Marketing  \n",
+       "1               True        NaN  \n",
+       "2              False    Finance  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"employees.csv\", parse_dates = [\"Start Date\", \"Last Login Time\"]) \n",
+    "                                                # given a list of strings(df column names), renders as datetime by default\n",
+    "\n",
+    "df[\"Senior Management\"] = df[\"Senior Management\"].astype(\"bool\") # .astype changes the type if set\n",
+    "df[\"Gender\"] = df[\"Gender\"].astype(\"category\")\n",
+    "df[\"Team\"] = df[\"Team\"].astype(\"category\")\n",
+    "df.head(3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 8 columns):\n",
+      "First Name           933 non-null object\n",
+      "Gender               855 non-null category\n",
+      "Start Date           1000 non-null datetime64[ns]\n",
+      "Last Login Time      1000 non-null datetime64[ns]\n",
+      "Salary               1000 non-null int64\n",
+      "Bonus %              1000 non-null float64\n",
+      "Senior Management    1000 non-null bool\n",
+      "Team                 957 non-null category\n",
+      "dtypes: bool(1), category(2), datetime64[ns](2), float64(1), int64(1), object(1)\n",
+      "memory usage: 42.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
