--- a/pandas/Panels.ipynb
+++ b/pandas/Panels.ipynb
@@ -2074,8 +2074,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2343,13 +2345,13 @@
        "[2366 rows x 30 columns]>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p.items"
+    "p.items #returns multi-DF"
    ]
   },
   {
